E2E-Applications/Calculator-Spring-Boot/k8s/basic-op-add.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basic-op-add
  namespace: calcspringboot
  labels:
    app: basic-op-add
spec:
  replicas: 1
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: basic-op-add
    spec:
      containers:
      - image: arunimi/basic-op-add:1.0.0
        name: add
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /actuator
            port: 8001
          initialDelaySeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8001
          initialDelaySeconds: 60
          timeoutSeconds: 10          
        resources:         
          requests:
            cpu: 20m
            memory: 50Mi      
---
apiVersion: v1
kind: Service
metadata:
  name: basic-op-add
  namespace: calcspringboot
  labels:
    app: basic-op-add
spec:
  type: ClusterIP
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8001
  selector:
    app: basic-op-add
