E2E-Applications/Calculator-Spring-Boot/k8s/basic-op-multiply.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basic-op-multiply
  namespace: calcspringboot
  labels:
    app: basic-op-multiply
spec:
  replicas: 1
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: basic-op-multiply
    spec:
      containers:
      - image: arunimi/basic-op-multiply:1.0.0
        name: multiply
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
        readinessProbe:
          httpGet:
            path: /actuator
            port: 8003
          initialDelaySeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8003
          initialDelaySeconds: 60
          timeoutSeconds: 10          
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
      restartPolicy: Always 
---
apiVersion: v1
kind: Service
metadata:
  name: basic-op-multiply
  namespace: calcspringboot
  labels:
    app: basic-op-multiply
spec:
  type: ClusterIP
  ports:
  - name: "8003"
    port: 8003
    targetPort: 8003
  selector:
    app: basic-op-multiply
