E2E-Applications/Calculator-Spring-Boot/k8s/basic-op-subtract.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basic-op-subtract
  namespace: calcspringboot
  labels:
    app: basic-op-subtract
spec:
  replicas: 1
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: basic-op-subtract
    spec:
      containers:
      - image: arunimi/basic-op-subtract:1.0.0
        name: subtract
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        readinessProbe:
          httpGet:
            path: /actuator
            port: 8002
          initialDelaySeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8002
          initialDelaySeconds: 60
          timeoutSeconds: 10          
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
      restartPolicy: Always            
---
apiVersion: v1
kind: Service
metadata:
  name: basic-op-subtract
  namespace: calcspringboot
  labels:
    app: basic-op-subtract
spec:
  type: ClusterIP
  ports:
  - name: "8002"
    port: 8002
    targetPort: 8002
  selector:
    app: basic-op-subtract
