E2E-Applications/Calculator-Spring-Boot/k8s/calculator-discovery.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calculator-discovery
  namespace: calcspringboot
  labels:
    app: calculator-discovery
spec:
  replicas: 1
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: calculator-discovery
    spec:
      containers:
      - image: arunimi/calculator-discovery
        name: discovery
        imagePullPolicy: Always
        ports:
        - containerPort: 8101
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-discovery
  namespace: calcspringboot
  labels:
    app: calculator-discovery
spec:
  type: ClusterIP
  ports:
  - name: "8101"
    port: 8101
    targetPort: 8101
  selector:
    app: calculator-discovery
