E2E-Applications/Calculator-Spring-Boot/k8s/composite-op.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: composite-op
  namespace: calcspringboot
  labels:
    app: composite-op
spec:
  replicas: 1
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: composite-op
    spec:
      containers:
      - image: arunimi/composite-op:1.0.0
        name: divide
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: composite-op
  namespace: calcspringboot
  labels:
    app: composite-op
spec:
  type: ClusterIP
  ports:
  - name: "8005"
    port: 8005
    targetPort: 8005
  selector:
    app: composite-op
