E2E-Applications/Calculator-Spring-Boot/k8s/discovery.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discovery
  namespace: calcspringboot
  labels:
    app: discovery
spec:
  replicas: 1
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
      - image: arunimi/calculator-discovery:1.0.0
        name: discovery
        imagePullPolicy: Always
        ports:
        - containerPort: 8101
        resources:
          requests:
            cpu: 10m
            memory: 10Mi          
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
  namespace: calcspringboot
  labels:
    app: discovery
spec:
  type: ClusterIP
  ports:
  - name: "8101"
    port: 8101
    targetPort: 8101
  selector:
    app: discovery
