E2E-Applications/Calculator-Spring-Boot/k8s/processor.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: processor
  namespace: calcspringboot
  labels:
    app: processor
spec:
  replicas: 1
  strategy: 
    type: Recreate  
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
      - image: arunimi/calculator-processor:1.0.0
        name: divide
        imagePullPolicy: Always
        ports:
        - containerPort: 8006
        readinessProbe:
          httpGet:
            path: /actuator
            port: 8006
          initialDelaySeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8006
          initialDelaySeconds: 60
          timeoutSeconds: 10          
        resources:
          requests:
            cpu: 20m
            memory: 50Mi           
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: processor
  namespace: calcspringboot
  labels:
    app: processor
  annotations:
    prometheus.io/scrape: 'true' 
    prometheus.io/path: '/actuator/prometheus'     
spec:
  type: ClusterIP
  ports:
  - name: "8006"
    port: 8006
    targetPort: 8006
  selector:
    app: processor
