E2E-Applications/Calculator-Spring-Boot/k8s/zipkin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin
  namespace: calcspringboot
  labels:
    app: zipkin
spec:
  replicas: 1
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - image: openzipkin/zipkin
        name: zipkin
        ports:
        - containerPort: 9411
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: calcspringboot
  labels:
    app: zipkin
spec:
  type: ClusterIP
  ports:
  - name: "9411"
    port: 9411
    targetPort: 9411
  selector:
    app: zipkin
